--- a/index.html
+++ b/index.html
@@ -43,26 +43,16 @@
         <p>Revolutionizing the way premium cars are marketed and sold in Canada and the USA. As North America's #1 Premium Car Marketing Agency, we leverage cutting-edge geolocation and SEO strategies to connect your premium cars with buyers across both nations.</p>
     </section>
 
-    <!-- Testimonials Section -->
-    <section id="testimonials" class="section">
-        <h1>What Our Clients in Canada and the USA are Saying</h1>
-        <div class="testimonials-carousel-container">
-            <div class="testimonials-slider">
-                <div class="testimonial">
-                    <p>"Buraleh & Co's targeted marketing helped us sell our cars faster than ever!"</p>
-                    <p>- John Doe, Toronto</p>
-                </div>
-                <div class="testimonial">
-                    <p>"We saw an incredible increase in leads after using their services."</p>
-                    <p>- Jane Smith, Los Angeles</p>
-                </div>
-                <div class="testimonial">
-                    <p>"Their geolocation targeting made all the difference in reaching the right buyers."</p>
-                    <p>- Alex Turner, Miami</p>
-                </div>
-            </div>
+ <!-- Testimonials Section -->
+<section id="testimonials" class="section">
+    <h1>What Our Clients in Canada and the USA are Saying</h1>
+    <div class="testimonials-carousel-container">
+        <div class="testimonials-slider">
+            <!-- Testimonials will be injected here dynamically -->
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Geolocation Section -->
     <section id="geolocation" class="section">
