--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <p>Revolutionizing the way premium cars are marketed and sold in Canada and the USA. As North America's #1 Premium Car Marketing Agency, we leverage cutting-edge geolocation and SEO strategies to connect your premium cars with buyers across both nations.</p>
     </section>
 
-    <!-- Testimonials Section -->
-    <section id="testimonials" class="section">
-        <h1>What Our Clients in Canada and the USA are Saying</h1>
-        <div class="testimonials-carousel-container">
-            <div class="testimonials-slider">
-              
-            </div>
+  <!-- Testimonials Section -->
+<section id="testimonials" class="section">
+    <h1>What Our Clients in Canada and the USA are Saying</h1>
+    <div class="testimonials-carousel-container">
+        <div class="testimonials-slider">
+            <!-- Testimonials will be injected here by JS -->
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Geolocation Section -->
     <section id="geolocation" class="section">
@@ -113,12 +113,14 @@
     </section>
 
     <!-- Car Makes Sold Section -->
-    <section id="car-makes-sold" class="section">
-        <h1>Car Makes Sold Across Canada & USA</h1>
-        <div class="car-makes-carousel-container">
-            <div class="car-makes-slider"></div>
+<section id="car-makes-sold" class="section">
+    <h1>Car Makes Sold Across Canada & USA</h1>
+    <div class="car-makes-carousel-container">
+        <div class="car-makes-slider">
+            <!-- Car Makes will be injected here by JS -->
         </div>
-    </section>
+    </div>
+</section>
 
   <!-- Cities Carousel Section -->
 <section id="cities" class="section">
