--- a/index.html
+++ b/index.html
@@ -112,15 +112,13 @@
         </div>
     </section>
 
-    <!-- Car Makes Sold Section -->
-<section id="car-makes-sold" class="section">
-    <h1>Car Makes Sold Across Canada & USA</h1>
-    <div class="car-makes-carousel-container">
-        <div class="car-makes-slider">
-            <!-- Car Makes will be injected here by JS -->
+   <!-- Car Makes Sold Section -->
+    <section id="car-makes-sold" class="section">
+        <h1>Car Makes Sold Across Canada & USA</h1>
+        <div class="car-makes-carousel-container">
+            <div class="car-makes-slider"></div>
         </div>
-    </div>
-</section>
+    </section>
 
   <!-- Cities Carousel Section -->
 <section id="cities" class="section">
