--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <!-- Video Section -->
     <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
         <iframe 
-            id="bg-video"
-            src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=30&controls=0&modestbranding=1&rel=0" 
-            frameborder="0" 
-            allow="autoplay; encrypted-media" 
-            allowfullscreen 
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
-        </iframe>
+    id="bg-video"
+    src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=30&controls=0&modestbranding=1&rel=0&showinfo=0" 
+    frameborder="0" 
+    allow="autoplay; encrypted-media" 
+    allowfullscreen 
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+</iframe>
         <div id="video-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: transparent; z-index: 2;"></div>
     </div>
 
