--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sell your premium cars faster with targeted marketing and SEO across Canada & the USA">
-    <meta name="keywords" content="sell premium cars faster, car dealership marketing, geolocation-based ads for cars in Canada and USA">
+    <meta name="description" content="Sell your premium boats faster with targeted marketing and SEO across Canada & the USA">
+    <meta name="keywords" content="sell premium boats faster, boat dealership marketing, geolocation-based ads for boats in Canada and USA">
     <meta name="author" content="Buraleh & Co">
-    <title>Buraleh & Co | Premium Car Marketing</title>
+    <title>Buraleh & Co | Premium Boat Marketing</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -40,7 +40,7 @@
     <!-- About Section -->
     <section id="about" class="section">
         <h1>Buraleh & Co</h1>
-        <p>Revolutionizing the way premium cars are marketed and sold in Canada and the USA. As North America's #1 Premium Car Marketing Agency, we leverage cutting-edge geolocation and SEO strategies to connect your premium cars with buyers across both nations.</p>
+        <p>Revolutionizing the way premium boats are marketed and sold in Canada and the USA. As North America's #1 Premium Boat Marketing Agency, we leverage cutting-edge geolocation and SEO strategies to connect your premium boats with buyers across both nations.</p>
     </section>
 
     <!-- Testimonials Section -->
@@ -55,25 +55,25 @@
 
     <!-- Geolocation Section -->
     <section id="geolocation" class="section">
-        <h1>Targeted Car Buyer Database Across Canada & USA</h1>
-        <p>Our geolocation-driven SEO strategy effectively targets buyers within your area, whether you're in bustling cities like Toronto or Los Angeles, or any region in between. We use cutting-edge data to connect you with potential buyers in Canada and the USA, optimizing your marketing strategy for maximum reach and results.</p>
+        <h1>Targeted Boat Buyer Database Across Canada & USA</h1>
+        <p>Our geolocation-driven SEO strategy effectively targets buyers within your area, whether you're in bustling cities like Toronto or Miami, or any region in between. We use cutting-edge data to connect you with potential buyers in Canada and the USA, optimizing your marketing strategy for maximum reach and results.</p>
     </section>
 
     <!-- Pricing Section -->
     <section id="pricing" class="section">
         <h1>Pricing Plans</h1>
-        <p>Choose the plan that best suits your car sales business, whether you're located in Canada or the USA. Each package is designed to help you sell more cars through targeted marketing, SEO, and more.</p>
+        <p>Choose the plan that best suits your boat sales business, whether you're located in Canada or the USA. Each package is designed to help you sell more boats through targeted marketing, SEO, and more.</p>
         <div class="pricing-plans">
             <div class="pricing-plan">
                 <h2>Basic</h2>
                 <p class="price">$500 USD/month (or $650 CAD/month)</p>
                 <ul>
                     <li>Geolocation-based ad targeting</li>
-                    <li>SEO optimization for car listings</li>
+                    <li>SEO optimization for boat listings</li>
                     <li>Customer lead generation tools</li>
                     <li>Email marketing campaign support</li>
                 </ul>
-                <p>Basic Car Seller Plan</p>
+                <p>Basic Boat Seller Plan</p>
             </div>
             <div class="pricing-plan">
                 <h2>Premium</h2>
@@ -85,7 +85,7 @@
                     <li>Priority customer support</li>
                     <li>Monthly performance reviews</li>
                 </ul>
-                <p>Premium Car Seller Plan</p>
+                <p>Premium Boat Seller Plan</p>
             </div>
             <div class="pricing-plan">
                 <h2>Enterprise</h2>
@@ -103,12 +103,12 @@
         </div>
     </section>
 
-    <!-- Car Makes Sold Section -->
-    <section id="car-makes-sold" class="section">
-        <h1>Car Makes Sold Across Canada & USA</h1>
-        <div class="car-makes-carousel-container">
-            <div class="car-makes-slider">
-                <!-- Car makes will be dynamically injected here -->
+    <!-- Boat Makes Sold Section -->
+    <section id="boat-makes-sold" class="section">
+        <h1>Boat Makes Sold Across Canada & USA</h1>
+        <div class="boat-makes-carousel-container">
+            <div class="boat-makes-slider">
+                <!-- Boat makes will be dynamically injected here -->
             </div>
         </div>
     </section>
@@ -140,7 +140,7 @@
     <!-- Contact Section -->
     <section id="contact" class="section">
         <h1>Contact Us</h1>
-        <p>If you're ready to sell your cars faster, reach out today!</p>
+        <p>If you're ready to sell your boats faster, reach out today!</p>
         <form action="https://formspree.io/f/xpzerabv" method="POST">
             <input type="text" placeholder="Your Name" name="name" required>
             <input type="email" placeholder="Your Email" name="email" required>
