--- a/faq.html
+++ b/faq.html
@@ -163,7 +163,7 @@
         <p>A2: You can sign up by contacting us through our Contact form on the website or by emailing us directly at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>. We’ll guide you through the process and help you choose the right plan.</p>
 
         <h2>Q3: What payment methods do you accept?</h2>
-        <p>A3: We accept payments via e-transfer to our business account at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>.</p>
+        <p>A3: We accept payments via PayPal. Please send your payment to <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a> via PayPal.</p>
 
         <h2>Q4: How can I cancel my subscription?</h2>
         <p>A4: To cancel your subscription or inquire about any changes to your services, please contact us at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>.</p>
