--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions - Buraleh & Co</title>
+    <title>Terms & Conditions - Premium Boat Marketing Agency</title>
     <style>
         /* Global Reset */
         *,
@@ -144,7 +144,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">Buraleh & Co</a>
+                <a href="index.html">Premium Boat Marketing Agency</a>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -160,26 +160,26 @@
         <p><strong>Last Updated: Sunday, December 15, 2024</strong></p>
 
         <h2>1. Service Usage</h2>
-        <p>You agree to use our website and services only for lawful purposes. You may not use the website in a way that could harm or disrupt its functionality.</p>
+        <p>You agree to use our website and services only for lawful purposes. You may not use the website in a way that could harm or disrupt its functionality. Our services focus on marketing boats, and the content and strategies we use reflect this industry.</p>
 
         <h2>2. Payments and Subscriptions</h2>
-        <p>All payments for services must be made via e-transfer to our business account at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>. By subscribing to any of our services, you agree to pay the fees as outlined on our website.</p>
+        <p>All payments for services must be made via PayPal. Please send your payment to <a href="mailto:buralehandco@gmail.com">buralehandco@gmail.com</a> via PayPal. By subscribing to any of our services, you agree to pay the fees as outlined on our website.</p>
 
         <h2>3. Content Ownership</h2>
-        <p>All content on our website, including logos, images, and text, is owned by Buraleh & Co unless otherwise stated. You may not copy, reproduce, or distribute this content without our written permission.</p>
+        <p>All content on our website, including logos, images, and text, is owned by Premium Boat Marketing Agency unless otherwise stated. You may not copy, reproduce, or distribute this content without our written permission.</p>
 
         <h2>4. Liability</h2>
-        <p>While we strive to provide accurate and reliable services, Buraleh & Co is not responsible for any errors or omissions, or for any damages arising from the use of our website or services.</p>
+        <p>While we strive to provide accurate and reliable services, Premium Boat Marketing Agency is not responsible for any errors or omissions, or for any damages arising from the use of our website or services.</p>
 
         <h2>5. Termination</h2>
         <p>We reserve the right to terminate or suspend your access to our services at any time, without notice, for violating these terms.</p>
 
         <h2>Contact Us</h2>
-        <p>For any inquiries related to these Terms & Conditions, please contact us at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>.</p>
+        <p>For any inquiries related to these Terms & Conditions, please contact us at <a href="mailto:buralehandco@gmail.com">buralehandco@gmail.com</a>.</p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Buraleh & Co. All Rights Reserved.</p>
+        <p>&copy; 2024 Premium Boat Marketing Agency. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
