--- a/index.html
+++ b/index.html
@@ -24,18 +24,14 @@
         </nav>
     </header>
 
-    <!-- Video Section -->
-    <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
-        <iframe 
-    id="bg-video"
-    src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=30&controls=0&modestbranding=1&rel=0&showinfo=0" 
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen 
-    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
-</iframe>
-        <div id="video-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: transparent; z-index: 2;"></div>
-    </div>
+
+<!-- Interactive Yacht Section -->
+    <section id="yacht-container">
+        <img id="yacht" src="your_yacht_image.png" alt="Interactive Yacht" />
+        <div class="controls">
+            <h2>Click and Drag to Rotate the Yacht</h2>
+        </div>
+    </section>
 
     <!-- About Section -->
     <section id="about" class="section">
