--- a/faq.html
+++ b/faq.html
@@ -157,22 +157,22 @@
         <h1>Frequently Asked Questions (FAQ)</h1>
         
         <h2>Q1: What services does Buraleh & Co offer?</h2>
-        <p>A1: We specialize in premium car marketing through advanced geolocation-based advertising and SEO strategies. Our services are designed to help dealerships and sellers reach the right buyers faster.</p>
+        <p>A1: We specialize in premium boat marketing through advanced geolocation-based advertising and SEO strategies. Our services are designed to help boat sellers and dealerships connect with the right buyers faster and more effectively.</p>
 
         <h2>Q2: How can I sign up for your services?</h2>
-        <p>A2: You can sign up by contacting us through our Contact form on the website or by emailing us directly at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>. We’ll guide you through the process and help you choose the right plan.</p>
+        <p>A2: You can sign up by contacting us through our Contact form on the website or by emailing us directly at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>. Our team will guide you through the process and help you select the best marketing plan for your premium boat listings.</p>
 
         <h2>Q3: What payment methods do you accept?</h2>
-        <p>A3: We accept payments via PayPal. Please send your payment to <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a> via PayPal.</p>
+        <p>A3: We accept payments via PayPal. Please send your payment to <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a> via PayPal to get started with our services.</p>
 
         <h2>Q4: How can I cancel my subscription?</h2>
         <p>A4: To cancel your subscription or inquire about any changes to your services, please contact us at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>.</p>
 
         <h2>Q5: How does your geolocation-based marketing work?</h2>
-        <p>A5: Our system uses geolocation data to target potential buyers within specific regions. This allows us to show your car listings to those most likely to be interested in them.</p>
+        <p>A5: Our geolocation-based marketing strategy uses advanced analytics to target potential boat buyers within specific geographic regions. This ensures your boat listings are shown to the right audience, increasing your chances of making a successful sale.</p>
 
         <h2>Q6: How do I get in touch with customer support?</h2>
-        <p>A6: For any customer inquiries or support requests, please email us at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>.</p>
+        <p>A6: For any customer inquiries or support requests, please email us at <a href="mailto:Buralehandco@gmail.com">Buralehandco@gmail.com</a>. We’re here to assist you with any questions or concerns.</p>
     </section>
 
     <footer>
