--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- About Section -->
     <section id="about" class="section">
         <h1>Buraleh & Co</h1>
-        <p>Revolutionizing the way premium boats are marketed and sold in Canada and the USA. As North America's #1 Premium Boat Marketing Agency, we leverage cutting-edge geolocation and SEO strategies to connect your premium boats with buyers across both nations.</p>
+        <p>Revolutionizing the way dental practices connect with patients across Canada. As Canada’s leading dental marketing agency, we specialize in advanced geolocation and SEO strategies that help you grow your practice and attract more patients from your local community.</p>
     </section>
 
     <!-- Testimonials Section -->
