--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Sell your premium boats faster with targeted marketing and SEO across Canada & the USA">
     <meta name="keywords" content="sell premium boats faster, boat dealership marketing, geolocation-based ads for boats in Canada and USA">
     <meta name="author" content="Buraleh & Co">
-    <title>Buraleh & Co | Premium Boat Marketing</title>
+    <title>Buraleh & Co | Premium Dental Marketing</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
