--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
 <!-- Interactive Yacht Section -->
     <section id="yacht-container">
-        <img id="yacht" src="your_yacht_image.png" alt="Interactive Yacht" />
+        <img id="dental" src="download.png" alt="dental" />
         <div class="controls">
-            <h2>Click and Drag to Rotate the Yacht</h2>
         </div>
     </section>
 
