--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 
 
 <!-- Interactive Yacht Section -->
-    <section id="yacht-container">
+    <section id="container">
         <img id="dental" src="download.png" alt="dental" />
-        <div class="controls">
         </div>
     </section>
 
