--- a/index.html
+++ b/index.html
@@ -3,13 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sell your premium boats faster with targeted marketing and SEO across Canada & the USA">
-    <meta name="keywords" content="sell premium boats faster, boat dealership marketing, geolocation-based ads for boats in Canada and USA">
+    <meta name="description" content="Grow your dental practice faster with targeted marketing and SEO across Canada">
+    <meta name="keywords" content="dental marketing, dental office SEO, patient acquisition, targeted marketing for dental clinics in Canada">
     <meta name="author" content="Buraleh & Co">
     <title>Buraleh & Co | Premium Dental Marketing</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Adding the background image to the body */
+        body {
+            background-image: url('https://www.dentalhygienenation.com/cdn/shop/files/1_2a71e065-5973-4f65-8116-914fe185e5cb.png?v=1696534847&width=2400');
+            background-size: cover; /* Ensures the image covers the entire background */
+            background-position: center; /* Centers the image */
+            background-attachment: fixed; /* Keeps the background fixed while scrolling */
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        header {
+            background: rgba(0, 0, 0, 0.5); /* Transparent dark background to make header readable */
+            padding: 15px 0;
+            position: relative;
+        }
+
+        header nav ul {
+            display: flex;
+            justify-content: center;
+            list-style-type: none;
+            padding: 0;
+        }
+
+        header nav ul li {
+            margin: 0 20px;
+        }
+
+        header nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 18px;
+        }
+
+        section {
+            padding: 60px 20px;
+            text-align: center;
+            color: #fff; /* White text for visibility */
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            font-size: 1.8rem;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.1rem;
+            max-width: 800px;
+            margin: 0 auto;
+            line-height: 1.6;
+        }
+
+        
+        footer {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            color: #fff;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -24,13 +89,6 @@
         </nav>
     </header>
 
-
-<!-- Interactive Yacht Section -->
-    <section id="container">
-        <img id="dental" src="download.png" alt="dental" />
-        </div>
-    </section>
-
     <!-- About Section -->
     <section id="about" class="section">
         <h1>Buraleh & Co</h1>
@@ -38,8 +96,8 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="section">
-        <h1>What Our Clients in Canada and the USA are Saying</h1>
+    <section id="pricing" class="section">
+        <h1>What Our Clients across Canada say</h1>
         <div class="testimonials-carousel-container">
             <div class="testimonials-slider">
                 <!-- Testimonials will be dynamically injected here -->
@@ -49,88 +107,94 @@
 
     <!-- Geolocation Section -->
     <section id="geolocation" class="section">
-        <h1>Targeted Boat Buyer Database Across Canada & USA</h1>
-        <p>Our geolocation-driven SEO strategy effectively targets buyers within your area, whether you're in bustling cities like Toronto or Miami, or any region in between. We use cutting-edge data to connect you with potential buyers in Canada and the USA, optimizing your marketing strategy for maximum reach and results.</p>
+        <h1>Targeted Patient Acquisition Across Canada</h1>
+        <p>Our geolocation-driven SEO strategy effectively targets potential patients in your specific Canadian city or region. Whether you're based in Vancouver, Toronto, Montreal, or anywhere in between, our precision marketing connects your dental practice with local patients in need of dental services. Maximize your visibility, increase your patient base, and grow your practice.</p>
     </section>
 
     <!-- Pricing Section -->
     <section id="pricing" class="section">
         <h1>Pricing Plans</h1>
-        <p>Choose the plan that best suits your boat sales business, whether you're located in Canada or the USA. Each package is designed to help you sell more boats through targeted marketing, SEO, and more.</p>
+        <p>Select the plan that best suits your dental practice’s needs. Our tailored marketing solutions are designed specifically to help you acquire more patients and grow your practice across Canada.</p>
         <div class="pricing-plans">
             <div class="pricing-plan">
                 <h2>Basic</h2>
-                <p class="price">$500 USD/month (or $650 CAD/month)</p>
+                <p class="price">$2500 CAD/month</p>
                 <ul>
-                    <li>Geolocation-based ad targeting</li>
-                    <li>SEO optimization for boat listings</li>
-                    <li>Customer lead generation tools</li>
+                    <li>Geolocation-based ad targeting for local patient acquisition</li>
+                    <li>SEO optimization for your dental website</li>
+                    <li>Lead generation tools for patient sign-ups</li>
                     <li>Email marketing campaign support</li>
                 </ul>
-                <p>Basic Boat Seller Plan</p>
+                <p>Basic Dental Marketing Plan</p>
             </div>
             <div class="pricing-plan">
                 <h2>Premium</h2>
-                <p class="price">$1000 USD/month (or $1300 CAD/month)</p>
+                <p class="price">$3000 CAD/month</p>
                 <ul>
                     <li>All Basic Plan features including:</li>
-                    <li>Advanced geolocation</li>
-                    <li>Social media advertising</li>
+                    <li>Advanced geolocation for more precise patient targeting</li>
+                    <li>Social media advertising for your practice</li>
                     <li>Priority customer support</li>
-                    <li>Monthly performance reviews</li>
+                    <li>Monthly performance reviews and consultations</li>
                 </ul>
-                <p>Premium Boat Seller Plan</p>
+                <p>Premium Dental Marketing Plan</p>
             </div>
             <div class="pricing-plan">
                 <h2>Enterprise</h2>
                 <p class="price">Custom Pricing</p>
                 <ul>
                     <li>All Premium Plan features including:</li>
-                    <li>Custom marketing strategies for your business</li>
-                    <li>Full digital marketing support</li>
-                    <li>Comprehensive competitor analysis</li>
+                    <li>Custom marketing strategies tailored to your practice</li>
+                    <li>Comprehensive digital marketing support</li>
+                    <li>Competitive analysis for local market insights</li>
                     <li>Advanced reporting & analytics</li>
                     <li>Dedicated account manager</li>
                 </ul>
-                <p>Dealership Seller Plan</p>
+                <p>For Larger Practices or Multiple Locations</p>
             </div>
         </div>
     </section>
 
     <!-- Cities Carousel Section -->
-    <section id="cities" class="section">
-        <h2>Our Service Cities</h2>
+    <section id="section" class="geolocation" style="background-image: url('https://images2.alphacoders.com/134/thumb-1920-1343512.png'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
+        <h2>Our Service Cities in Canada</h2>
         <div class="cities-carousel-container">
             <div class="cities-slider">
                 <div class="city">
-                    <h3>New York</h3>
-                </div>
-                <div class="city">
-                    <h3>Los Angeles</h3>
+                    <h3>Vancouver</h3>
                 </div>
                 <div class="city">
                     <h3>Toronto</h3>
                 </div>
                 <div class="city">
-                    <h3>Vancouver</h3>
+                    <h3>Montreal</h3>
                 </div>
                 <div class="city">
-                    <h3>Miami</h3>
+                    <h3>Calgary</h3>
+                </div>
+                <div class="city">
+                    <h3>Ottawa</h3>
+                </div>
+                <div class="city">
+                    <h3>Edmonton</h3>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section">
+    <section id="pricing" class="section" style="background-image: url('https://wallpapers.com/images/hd/white-and-purple-oadrnmje32yps6in.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 50px 0;">
+      <div class="pricing-plans">
+            <div class="pricing-plan">
         <h1>Contact Us</h1>
-        <p>If you're ready to sell your boats faster, reach out today!</p>
+        <p>If you're ready to attract more patients and grow your dental practice, reach out to us today!</p>
         <form action="https://formspree.io/f/xpzerabv" method="POST">
             <input type="text" placeholder="Your Name" name="name" required>
             <input type="email" placeholder="Your Email" name="email" required>
             <textarea placeholder="Message" name="message" required></textarea>
             <button type="submit">Submit</button>
         </form>
+              
     </section>
 
     <!-- Footer Section -->
@@ -151,7 +215,7 @@
                 <a href="terms-conditions.html" target="_blank">Terms & Conditions</a> | 
                 <a href="faq.html" target="_blank">FAQ</a>
             </div>
-            <p>&copy; 2024 Buraleh & Co. All Rights Reserved.</p>
+            <p >&copy; 2024 Buraleh & Co. All Rights Reserved.</p>
         </div>
     </footer>
 
